Update project link to specific GitHub repository

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="project">
                 <h3>Kişisel Portföy Web Sitesi</h3>
                 <p>Projelerimi ve becerilerimi sergileyen duyarlı bir web sitesi.</p>
-                <a href="https://github.com/">Buradan Erişebilirsinz.</a>
+                <a href="https://github.com/xzyqiu/resume-webpage/">Buradan Erişebilirsinz.</a>
             </div>
             <div class="project">
                 <h3>Şifrelemeli Mesaj Uygulaması</h3>
