--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
             <div class="project">
                 <h3>Kişisel Portföy Web Sitesi</h3>
                 <p>Projelerimi ve becerilerimi sergileyen duyarlı bir web sitesi.</p>
-                <a href="https://github.com/xzyqiu/resume-webpage/">Buradan Erişebilirsinz.</a>
+                <a href="https://github.com/xzyqiu/resume-webpage/">Buradan Erişebilirsiniz.</a>
             </div>
             <div class="project">
                 <h3>Şifrelemeli Mesaj Uygulaması</h3>
-                <p>Askeri düzeyde şifrelemeye sahip bir android mesaj uygulaması.</p>
+                <p>Sadece terminal kullanan düşük boyutta şifreli bir mesajlaşma uygulaması.</p>
+                <a href="https://github.com/xzyqiu/Terminal-Chat-App">Buradan Erişebilirsiniz.</a>
             </div>
             <div class="project">
                 <h3>Android Yapılacaklar Listesi</h3>
