--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="project">
                 <h3>Kişisel Portföy Web Sitesi</h3>
                 <p>Projelerimi ve becerilerimi sergileyen duyarlı bir web sitesi.</p>
-                <a href="https://github.com/xzyqiu/resume-webpage/">Buradan Erişebilirsiniz.</a>
+                <a href="https://github.com/xzyqiu/resume-webpage">Buradan Erişebilirsiniz.</a>
             </div>
             <div class="project">
                 <h3>Şifrelemeli Mesaj Uygulaması</h3>
@@ -45,8 +45,9 @@
                 <a href="https://github.com/xzyqiu/Terminal-Chat-App">Buradan Erişebilirsiniz.</a>
             </div>
             <div class="project">
-                <h3>Android Yapılacaklar Listesi</h3>
-                <p>Java'da geliştirilen ve kullanıcıların görevleri verimli bir şekilde yönetmesine yardımcı olan bir uygulama.</p>
+                <h3>Bleach (Meta Veri Temizleyici)</h3>
+                <p>Bleach, görseller, videolar, PDF’ler ve ses dosyaları dahil çeşitli dosyalardaki gizli meta verileri temizleyen güçlü bir araçtır; dosyalarınızı iz bırakmadan paylaşmanızı sağlar.</p>
+                <a href="https://github.com/xzyqiu/Bleach">Buradan Erişebilirsiniz.</a>
             </div>
         </section>
     </main>
