--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="project">
                 <h3>Bleach (Meta Veri Temizleyici)</h3>
-                <p>Bleach, görseller, videolar, PDF’ler ve ses dosyaları dahil çeşitli dosyalardaki gizli meta verileri temizleyen güçlü bir araçtır; dosyalarınızı iz bırakmadan paylaşmanızı sağlar.</p>
+                <p>Bleach, dosyalardaki gizli meta verileri temizleyen bir araçtır. dosyalarınızı iz bırakmadan paylaşmanızı sağlar.</p>
                 <a href="https://github.com/xzyqiu/Bleach">Buradan Erişebilirsiniz.</a>
             </div>
         </section>
